<resources>
    <string name="app_name">HjertetKafeMoss</string>
    <string name="logo">logo</string>
    <string name="hjertet_kafe_moss">Hjertet Kafé Moss</string>
    <string name="forsidebilde">forsidebilde</string>
    <string name="order_description">Bestilling app for operasjon for å bestille og levering av mat</string>
    <string name="start">Start</string>
    <string name="telefonnummer">Telefonnummer: 69866240</string>
    <string name="search_here">Søk her!</string>
    <string name="search_food">Søk etter matbestillingen</string>
    <string name="popular">Mest kjøpte</string>
    <string name="home">Hjem</string>
    <string name="category">Kategorier</string>
    <string name="order">Bestillinger</string>
    <string name="string_about">Om oss</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="basketcard">Handlekurv</string>
    <string name="title">Tittel</string>
    <string name="image_poster">image poster</string>
    <string name="zero">0</string>
    <string name="kr">Kr</string>
    <string name="add">+ Legg til</string>
</resources>