<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:elevation="5dp">

    <ImageView
        android:id="@+id/popularImageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/image_poster"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/foods" />

    <TextView
        android:id="@+id/popularTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="4dp"
        android:gravity="center"
        android:text="@string/title"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.395"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popularImageView" />

    <TextView
        android:id="@+id/cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="7dp"
        android:text="@string/zero"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="#444445"
        app:layout_constraintHorizontal_bias="0.101"
        app:layout_constraintStart_toStartOf="@+id/popularTitle"
        app:layout_constraintTop_toBottomOf="@+id/popularTitle" />

    <TextView
        android:id="@+id/kr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="10dp"
        android:text="@string/kr"
        android:textColor="#444445"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/popularTitle"
        app:layout_constraintTop_toBottomOf="@+id/popularTitle" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_margin="6dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_button"
        android:text="@string/add"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toEndOf="@+id/kr"
        app:layout_constraintTop_toTopOf="@+id/popularTitle" />


</androidx.constraintlayout.widget.ConstraintLayout>