<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.FrontActivity">

    <TextView
        android:id="@+id/colorTextView"
        android:layout_width="412dp"
        android:layout_height="392dp"
        android:background="@drawable/frontrectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="109dp"
        android:layout_height="111dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/hjertetlogo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.073" />

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="277dp"
        android:layout_height="58dp"
        android:text="@string/hjertet_kafe_moss"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/logoImageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.145" />

    <ImageView
        android:id="@+id/frontImageView"
        android:layout_width="265dp"
        android:layout_height="245dp"
        android:layout_marginBottom="268dp"
        android:contentDescription="@string/forsidebilde"
        android:src="@drawable/aerundstykker"
        app:layout_constraintBottom_toBottomOf="@+id/colorTextView"
        app:layout_constraintEnd_toEndOf="@+id/nameTextView"
        app:layout_constraintStart_toStartOf="@+id/logoImageView"
        app:layout_constraintTop_toBottomOf="@+id/nameTextView"
        app:layout_constraintVertical_bias="0.846" />

    <TextView
        android:id="@+id/infoTextView"
        android:layout_width="312dp"
        android:layout_height="103dp"
        android:layout_marginTop="28dp"
        android:text="@string/order_description"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frontImageView" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="140dp"
        android:layout_height="55dp"
        android:text="@string/start"
        app:layout_constraintBottom_toBottomOf="@+id/colorTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infoTextView"
        app:layout_constraintVertical_bias="0.549" />

</androidx.constraintlayout.widget.ConstraintLayout>